--- a/pages/index.html
+++ b/pages/index.html
@@ -10,10 +10,10 @@
 
 <body>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>jillis</li>
+        <li>is</li>
+        <li>een</li>
+        <li>homo</li>
     </ul>
 </body>
 </html>
