--- a/pages/index.html
+++ b/pages/index.html
@@ -18,6 +18,6 @@
 </body>
 <div>hoi</div>
 <section>
-    <p>yolo je moeder en je vader</p>
+    <p>yolo je moeder en je zoon</p>
 </section>
 </html>
