--- a/pages/index.html
+++ b/pages/index.html
@@ -1,15 +1,67 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<!--Links-->
-<link href="../css/index.css" rel="stylesheet" type="text/css">
-<!--Metadata-->
 <meta charset="utf-8">
-<title>index</title>
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Bootstrap - Prebuilt Layout</title>
+
+<!-- Bootstrap -->
+<link href="../css/bootstrap.css" rel="stylesheet">
 </head>
 
 <body>
-    <p>Jillis is gay</p>
-    
+<!--Navbar-->
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid"> 
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#defaultNavbar1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+      <a class="navbar-brand" href="index.html">J-J-L-Website</a></div>
+    <div class="collapse navbar-collapse" id="defaultNavbar1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Link<span class="sr-only">(current)</span></a></li>
+        <li><a href="#">Link</a></li>
+        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown<span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+      <form class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+    </div> 
+  </div>
+</nav>
+<!--Pagina-->
+
+<!--Footer-->
+<footer class="navbar navbar-default navbar-fixed-bottom">
+	<div class="container">
+    	<p class="navbar-text pull-left" id="copyright"></p>
+		<script>
+        var now = new Date();
+        function fourDigitYear(number)	{
+            return (number < 1000) ? number + 1900 : number;
+        }
+        thisyear = (fourDigitYear(now.getYear())) ;
+        document.getElementById("copyright").innerHTML = "Copyright " + thisyear;
+        </script>
+    </div>
+</footer>
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
+<script src="../js/jquery-1.11.3.min.js"></script>
+
+<!-- Include all compiled plugins (below), or include individual files as needed --> 
+<script src="../js/bootstrap.js"></script>
 </body>
 </html>
