--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Bootstrap - Prebuilt Layout</title>
+<title>Index</title>
 
 <!-- Bootstrap -->
 <link href="../css/bootstrap.css" rel="stylesheet">
@@ -47,8 +47,8 @@
 <!--Footer-->
 <footer class="navbar navbar-default navbar-fixed-bottom">
 	<div class="container">
-    	<p class="navbar-text pull-left" id="copyright"></p>
-		<script>
+	  <p class="text-center" id="copyright">Copyright 2017</p>
+	  <script>
         var now = new Date();
         function fourDigitYear(number)	{
             return (number < 1000) ? number + 1900 : number;
