--- a/pages/index.html
+++ b/pages/index.html
@@ -43,7 +43,11 @@
   </div>
 </nav>
 <!--Pagina-->
-
+<!---Image-->
+  <section class="coverBGIMG">
+      <img src="#" id="backgroundIMG">
+  </section>
+<!--- End Image-->
 <!--Footer-->
 <footer class="navbar navbar-default navbar-fixed-bottom">
 	<div class="container">
