--- a/pages/index.html
+++ b/pages/index.html
@@ -5,9 +5,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Index</title>
-
 <!-- Bootstrap -->
 <link href="../css/bootstrap.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="index.css" />
 </head>
 
 <body>
@@ -45,7 +45,7 @@
 <!--Pagina-->
 <!---Image-->
   <section class="coverBGIMG">
-      <img src="#" id="backgroundIMG">
+      <img src="img/CodeBG.jpg" id="backgroundIMG">
   </section>
 <!--- End Image-->
 <!--Footer-->
