--- a/pages/index.html
+++ b/pages/index.html
@@ -19,7 +19,7 @@
       <a class="navbar-brand" href="index.html">J-J-L-Websitedesign</a></div>
     <div class="collapse navbar-collapse" id="defaultNavbar1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link<span class="sr-only">(current)</span></a></li>
+        <li><a href="contact.html">Contact<span class="sr-only">(current)</span></a></li>
         <li><a href="#">Link</a></li>
         <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -42,12 +42,40 @@
     </div> 
   </div>
 </nav>
+<!--Carousel-->
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+	<ol class="carousel-indicators">
+    	<li data-target="#myCarousel" data-slide-to="0" data-interval="3000" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="0" data-interval="3000" class="active"></li>
+    </ol>
+    
+    <div class="carousel-inner" role="listbox">
+    	<div class="item active">
+        	<img src="../img/carousel-code.png" alt="Code">
+            <div class="carousel-caption">
+            	<h1>Coding</h1>
+                <p>We code websites</p>
+            </div>
+        </div>
+        <div class="item">
+        	<img src="../img/carousel-design.png" alt="Design">
+            <div class="carousel-caption">
+            	<h1>Design</h1>
+                <p>Websites need to be designed</p>
+            </div>
+        </div>
+   </div>
+   
+   <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+   		<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+   </a>
+   <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+   <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+   <span class="sr-only">Next</span>
+     
 <!--Pagina-->
-<!---Image-->
-  <section class="coverBGIMG">
-      <img src="img/CodeBG.jpg" id="backgroundIMG">
-  </section>
-<!--- End Image-->
+
 <!--Footer-->
 <footer class="navbar navbar-default navbar-fixed-bottom">
 	<div class="container">
