--- a/pages/index.html
+++ b/pages/index.html
@@ -65,7 +65,6 @@
             </div>
         </div>
    </div>
-   
    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
    		<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
@@ -73,7 +72,8 @@
    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
    <span class="sr-only">Next</span>
-     
+   </a>
+   </div>
 <!--Pagina-->
 
 <!--Footer-->
