--- a/pages/contact.html
+++ b/pages/contact.html
@@ -43,7 +43,23 @@
         </div> 
       </div>
     </nav>
-    <!--page-->
+    <!--Page-->
+    <div class="5em"></div>
+    <h1>Contact <small>us to see how we can help you</small></h1>
+    <!--Footer-->
+<footer class="navbar navbar-default navbar-fixed-bottom">
+	<div class="container">
+	  <p class="text-center" id="copyright">Copyright 2017</p>
+	  <script>
+        var now = new Date();
+        function fourDigitYear(number)	{
+            return (number < 1000) ? number + 1900 : number;
+        }
+        thisyear = (fourDigitYear(now.getYear())) ;
+        document.getElementById("copyright").innerHTML = "Copyright " + thisyear;
+        </script>
+    </div>
+</footer>
     
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
 <script src="../js/jquery-1.11.3.min.js"></script>
